--- a/index.html
+++ b/index.html
@@ -1,179 +1,58 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Corte Fino</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      font-family: 'Georgia', serif;
-      background-color: #111;
-      color: #fff;
-    }
-    header {
-      background-color: #000;
-      padding: 20px;
-      text-align: center;
-      border-bottom: 3px solid gold;
-    }
-    header h1 {
-      margin: 0;
-      color: gold;
-      font-size: 3em;
-    }
-    .tagline {
-      font-style: italic;
-      color: #ccc;
-      margin-top: 10px;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      background-color: #222;
-      padding: 10px;
-    }
-    nav a {
-      color: gold;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      padding: 40px 20px;
-    }
-    h2 {
-      color: gold;
-      border-bottom: 2px solid #444;
-      padding-bottom: 10px;
-    }
-    .servicios table {
-      width: 100%;
-      max-width: 500px;
-      margin: auto;
-      border-collapse: collapse;
-    }
-    .servicios td, .servicios th {
-      border: 1px solid #555;
-      padding: 10px;
-      text-align: left;
-    }
-    .galeria {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-    .galeria img {
-      width: 100%;
-      max-width: 300px;
-      border: 2px solid gold;
-      border-radius: 8px;
-    }
-    .horarios, .contacto, .testimonios {
-      max-width: 600px;
-      margin: auto;
-    }
-    .boton-reservar {
-      display: inline-block;
-      background-color: gold;
-      color: #000;
-      padding: 10px 20px;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 5px;
-      margin: 20px auto;
-      text-align: center;
-    }
-    iframe {
-      width: 100%;
-      height: 300px;
-      margin-top: 20px;
-      border: none;
-    }
-    footer {
-      background-color: #000;
-      text-align: center;
-      padding: 20px;
-      color: #777;
-      font-size: 0.9em;
-    }
-    @media (max-width: 600px) {
-      .servicios table, .galeria img {
-        width: 100%;
-      }
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Corte Fino Barbería</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>Corte Fino</h1>
-    <div class="tagline">Corte fino, flow pesado</div>
+    <p>Corte fino, flow pesado</p>
+    <a href="#contacto" class="boton-reserva">Reservar cita</a>
   </header>
 
-  <nav>
-    <a href="#servicios">Servicios</a>
-    <a href="#galeria">Galería</a>
-    <a href="#horarios">Horarios</a>
-    <a href="#contacto">Contacto</a>
-  </nav>
-
-  <section id="servicios" class="servicios">
+  <section id="servicios">
     <h2>Servicios</h2>
-    <table>
-      <tr><td>Corte clásico</td><td>$100 MXN</td></tr>
-      <tr><td>Corte + Barba</td><td>$150 MXN</td></tr>
-      <tr><td>Rasurado completo</td><td>$120 MXN</td></tr>
-      <tr><td>Diseño de cejas</td><td>$50 MXN</td></tr>
-      <tr><td>Tinte para cabello/barba</td><td>$200 MXN</td></tr>
-    </table>
-    <div style="text-align:center;">
-      <a class="boton-reservar" href="#contacto">Reservar cita</a>
-      <p>También puedes llegar sin cita.</p>
-    </div>
+    <ul>
+      <li>Corte clásico - $100 MXN</li>
+      <li>Corte + Barba - $150 MXN</li>
+      <li>Rasurado completo - $120 MXN</li>
+      <li>Diseño de cejas - $50 MXN</li>
+      <li>Tinte para cabello/barba - $200 MXN</li>
+    </ul>
   </section>
 
-  <section id="galeria" class="galeria">
+  <section id="galeria">
     <h2>Galería</h2>
-    <img src="https://via.placeholder.com/300x400?text=Corte+1" alt="Corte antes/después">
-    <img src="https://via.placeholder.com/300x400?text=Corte+2" alt="Estilo moderno">
-    <img src="https://via.placeholder.com/300x400?text=Corte+3" alt="Diseño de barba">
+    <img src="images/corte1.jpg" alt="Corte 1" />
+    <img src="images/corte2.jpg" alt="Corte 2" />
   </section>
 
-  <section id="horarios" class="horarios">
+  <section id="testimonios">
+    <h2>Testimonios</h2>
+    <blockquote>"¡Me encantó el corte! Muy profesionales." – Carlos R.</blockquote>
+    <blockquote>"Ambiente genial y atención de primera." – Luis M.</blockquote>
+  </section>
+
+  <section id="horarios">
     <h2>Horarios</h2>
     <p>Martes a Viernes: 10:00 AM – 8:00 PM</p>
     <p>Domingo: 10:00 AM – 10:00 PM</p>
     <p>Lunes: Cerrado o solo con cita</p>
   </section>
 
-  <section id="contacto" class="contacto">
+  <section id="contacto">
     <h2>Contacto</h2>
-    <p><i class="fas fa-map-marker-alt"></i> Guanajuato 14, San Antonio Zomeyucan, 53570 Naucalpan de Juárez, Méx.</p>
-    <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/525611615924" style="color:gold;">56-1161-5924</a></p>
-    <p><i class="fab fa-facebook"></i> <a href="#" style="color:gold;">fb.com/CorteFinoBarber</a></p>
-    <p><i class="fab fa-instagram"></i> <a href="#" style="color:gold;">@corte.fino.barber</a></p>
-  </section>
-
-  <section class="video">
-    <h2>Conócenos</h2>
-    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Video de presentación"></iframe>
-  </section>
-
-  <section class="testimonios">
-    <h2>Testimonios</h2>
-    <p>"El mejor corte que me he hecho. ¡Recomendadísimo!" – Luis R.</p>
-    <p>"Ambiente relajado y profesional. 10/10." – Marco G.</p>
-    <p>"Siempre salgo con flow nuevo. Gracias Corte Fino!" – Dani T.</p>
+    <p>Dirección: Guanajuato 14, San Antonio Zomeyucan, Naucalpan</p>
+    <p>WhatsApp: 56-1161-5924</p>
+    <p>Facebook: @CorteFinoBarber</p>
+    <p>Instagram: @corte_fino_mx</p>
   </section>
 
   <footer>
-    &copy; 2025 Corte Fino. Todos los derechos reservados.
+    <p>&copy; 2025 Corte Fino</p>
   </footer>
 </body>
 </html>
